<resources>
    <string name="app_name">Finanças em Foco</string>
    <string name="btn_login">Login</string>
    <string name="btn_create_account">Criar conta</string>
    <string name="btn_continue">Continuar</string>
    <string name="btn_close">Fechar</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="btn_understood">Entendi</string>
    <string name="monetary_format">R$ %s</string>
    <string name="in_dev_explanation">Ops! Essa feature ainda esta em desenvolvimento. Tente novamente no futuro.</string>
    <string name="cannot_proceed_generic_error">Ops! Não foi possível concluir. Tente novamente mais tarde.</string>

    <!-- signup email step -->
    <string name="type_your_email_title">Vamos criar sua conta!</string>
    <string name="type_your_email_description">Para começar, informe seu email</string>
    <string name="type_your_email">Digite seu email</string>
    <string name="confirm_your_email">Confirme seu email</string>
    <string name="signup_failure_invalid_email">Informe um e-mail válido.</string>
    <string name="signup_failure_not_equals_email">O e-mail é diferente do anterior.</string>

    <!-- signup password step -->
    <string name="type_your_password_title">Estamos quase lá!</string>
    <string name="type_your_password_description">Agora crie sua senha</string>
    <string name="create_your_password">Crie sua senha</string>
    <string name="confirm_your_password">Confirme sua senha</string>
    <string name="signup_confirm_failure_generic">Ops! Não foi possível concluir, tente com uma conta diferente.</string>
    <string name="signup_failure_invalid_password">Informe uma senha válida de ao menos oito dígitos.</string>
    <string name="signup_failure_not_equals_password">A senha é diferente da anterior.</string>

    <!-- login -->
    <string name="login_title">Bem vindo de volta</string>
    <string name="login_description">Acesse a sua conta</string>
    <string name="type_your_password">Digite sua senha</string>
    <string name="forgot_password">Esqueceu a senha?</string>
    <string name="btn_login_registre_your_account">Não tem uma conta? <b>Registre-se</b></string>
    <string name="login_failure_message">Ops! Verifique se seu e-mail e senha estão corretos.</string>
    <string name="login_failure_incorrect_email">Verifique seu e-mail</string>
    <string name="login_failure_incorrect_password">Verifique sua senha</string>
    <string name="login_failure_invalid_email">Informe um e-mail válido</string>
    <string name="login_failure_invalid_password">Informe a senha</string>

    <!-- Password recovery -->
    <string name="btn_password_recovery">Recuperar senha</string>
    <string name="password_recovery_title">Vamos recuperar sua senha</string>
    <string name="password_recovery_description">Você receberá por e-mail as instruções para recuperar sua senha</string>
    <string name="password_recovery_send_success_title">Sucesso ao enviar o email</string>
    <string name="password_recovery_send_success_description">Confira no seu email as orientações para recuperar sua senha.</string>
    <string name="password_recovery_error">Ops! Não foi possível concluir, tente novamente.</string>

    <!-- Home -->
    <string name="home_salutation">Olá, o que você deseja fazer hoje?</string>
    <string name="btn_create_goal">Cadastrar objetivo</string>
    <string name="btn_view_goals">Visualizar meus objetivos</string>
    <string name="btn_check_rates">Consultar taxas de juros</string>

    <!-- create goal -->
    <string name="create_goal_toolbar_title">Cadastro de objetivos</string>
    <string name="create_goal_title">Vamos definir seu objetivo!</string>
    <string name="create_goal_subtitle">Defina metas, acompanhe o progresso e realize seus objetivos.</string>
    <string name="create_goal_title_placeholder">Defina um nome para seu objetivo</string>
    <string name="create_goal_title_hint">Nome</string>
    <string name="create_goal_description_hint">Descrição</string>
    <string name="create_goal_description_placeholder">Descreva seu objetivo</string>
    <string name="crate_goal_value_hint">Valor</string>
    <string name="crate_goal_value_placeholder">R$</string>

    <!-- create goal second step -->
    <string name="create_goal_second_step_title">Você está quase lá!</string>
    <string name="create_goal_second_step_subtitle">Falta pouco para registrar seu objetivo.</string>
    <string name="create_goal_frequency_title">Aporte</string>
    <string name="create_goal_frequency_subtitle">Com que frequencia você pretende poupar?</string>
    <string name="create_goal_frequency_month">Mensal</string>
    <string name="create_goal_frequency_week">Semanal</string>
    <string name="create_goal_progress_title">Progressão</string>
    <string name="create_goal_progress_subtitle">Você pretende guardar um valor fixo ou aumentar gradualmente?</string>
    <string name="create_goal_progress_fixed">Valor fixo</string>
    <string name="create_goal_progress_relative">Aumento gradual</string>
    <string name="create_goal_init_date_hint">Data de início</string>
    <string name="create_goal_init_date_place_holder">Defina a data de início para o seu objetivo</string>
    <string name="create_goal_finish_date_hint">Data de conclusão</string>
    <string name="create_goal_finish_date_place_holder">Defina a data para conclusão do seu objetivo</string>
    <string name="create_goal_with_success_title">Objetivo criado com sucesso</string>
    <string name="create_goal_with_success_description">Seu objetivo foi cadastrado com sucesso! Agora é possível acompanhar registrar o progresso</string>

    <!-- create goals errors -->
    <string name="create_goals_generic_input_error">Não foi possível prosseguir. Por favor, verifique os campos.</string>
    <string name="create_goals_title_error">Crie um nome para o seu objetivo</string>
    <string name="create_goals_value_error">Defina um valor válido para o seu objetivo</string>
    <string name="create_goals_date_error">Data inválida</string>

    <!-- list of goals -->
    <string name="list_goal_title">Esses são seu objetivos</string>
    <string name="list_goal_title_empty_state">Parece que você ainda não cadastrou nenhum objetivo\nComeçe agora mesmo!</string>
    <string name="list_goal_search">Pesquisar</string>

    <!-- menu items -->
    <string name="menu_item_rates">Calcular juros</string>
    <string name="menu_item_goals">Meus objetivos</string>
    <string name="menu_item_profile">Meu perfil</string>

    <!-- goal details -->
    <string name="goal_details_my_goal">Meu objetivo</string>
    <string name="goal_details_title">Aqui estão os detalhes do seu objetivo</string>
    <string name="goal_details_description">Acompanhe sua meta e registre seu progresso.</string>
    <string name="goal_details_register_progress">Registrar progresso</string>
    <string name="goal_details_total_value">Total: R$ %s</string>
    <string name="goal_details_remaining_value">Restante: R$ %s</string>
    <string name="goal_details_month_frequency">Aporte mensal</string>
    <string name="goal_details_week_frequency">Aporte semanal</string>
    <string name="goal_details_fixed_value">Valor fixo</string>
    <string name="goal_details_relative_value">Aumento gradual</string>
    <string name="goal_details_delete_goal">Deletar objetivo</string>
    <string name="goal_details_delete_dialog_title">Excluir objetivo</string>
    <string name="goal_details_delete_dialog_message">Você tem certeza que deseja excluir esse objetivo? Essa ação é irreversível</string>
    <string name="goal_delete_success_title">Objetivo deletado com sucesso</string>
    <string name="goal_delete_success_description">Seu objetivo foi deletado. Você pode cadastrar um novo quando desejar.</string>

    <!-- goal increment -->
    <string name="goal_increment_top_bar">Registrar progresso</string>
    <string name="goal_increment_title">Vamos registrar o seu avanço!</string>
    <string name="goal_increment_description">Você está cada vez mais perto de alcançar seu objetivo\nSelecione o valor que deseja registrar conforme o cronograma ou clique no botão mais para registrar um valor diferente.</string>
    <string name="goal_increment_success_feedback_title">Sucesso!</string>
    <string name="goal_increment_success_feedback_description">Registramos o seu progresso com sucesso</string>
    <string name="goal_increment_float_button_description">Registramos um valor diferente</string>
    <string name="increment_goal_bottom_sheet_title">Deseja registrar um valor diferente?</string>
    <string name="increment_goal_bottom_sheet_input">Informe o valor</string>
    <string name="increment_goal_bottom_sheet_error">Por favor, insira um número válido</string>
    <string name="increment_goal_congratulation_title">Parabéns!</string>
    <string name="increment_goal_congratulation_description">Esse objetivo já foi alcançado, relembre sua jornada</string>
    <string name="cannot_proceed_has_deposit_completed">Esse deposito já foi registrado</string>

    <!-- calculate rates -->
    <string name="finance_assistant_toolbar">Assistente de despesas</string>
    <string name="calculate_rates_title">Vamos calcular a taxa de juros!</string>
    <string name="calculate_rate_value_hint">Valor</string>
    <string name="calculate_rate_value_placeholder">Informe o valor</string>
    <string name="calculate_rate_hint">Taxa</string>
    <string name="calculate_rate_placeholder_percent">%</string>
    <string name="calculate_rate_placeholder">Informe a taxa de juros</string>
    <string name="calculate_rate_period_hint">Informe o período de tempo (meses/anos)</string>
    <string name="calculate_rate_month">Ao mês</string>
    <string name="calculate_rate_year">Ao ano</string>
    <string name="calculate_rates_button_calculate">Calcular</string>
    <string name="calculate_rates_vehicle_option">Taxa de juros para aquisição de veículos</string>
    <string name="calculate_rates_house_option">Taxa de juros para aquisição de imóveis</string>
    <string name="calculate_rates_other_option">Taxa de juros para aquisição de outros bens</string>
    <string name="calculate_rates_credit_option">Taxa de juros das operações de crédito em geral</string>

    <!-- calculate rates result -->
    <string name="rates_result_title">Taxa de juros calculada</string>
    <string name="rates_result_subtitle">Esses são os resultados obtidos</string>
    <string name="rates_result_info_value">Montante %s</string>
    <string name="rates_result_info_rate">Taxa de juros: %s</string>
    <string name="rates_result_info_value_rate">Valor com juros: %s</string>
    <string name="rates_result_info_part_rate">Valor por parcela: %s</string>
    <string name="rates_result_info_rate_general">A taxa de juros média do mercado para esse tipo de serviço é de %s</string>

    <!-- profile -->
    <string name="profile_edit_details">Editar informações</string>
    <string name="profile_edit_logout">Sair</string>
    <string name="profile_delete_account">Deletar conta</string>
    <string name="profile_salutation">Olá, %s</string>
    <string name="profile_email">Email: %s</string>
    <string name="profile_notification">Receber notificações: %s</string>
    <string name="profile_notification_yes">sim</string>
    <string name="profile_notification_no">não</string>
    <string name="profile_goals">Objetivos alcançados: %s</string>
    <string name="profile_rates">Taxas de juros calculadas: %s</string>
    <string name="profile_edit_title">Vamos editar suas informações</string>
    <string name="profile_edit_name">Digite seu nome</string>
</resources>