<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".goal.create.presentation.secondtep.CreateGoalSecondStepFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/create_goal_toolbar_title"
            app:titleCentered="true"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_fifty"
        android:text="@string/create_goal_second_step_title"
        android:textSize="@dimen/text_size_sixteen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_sixteen"
        android:text="@string/create_goal_second_step_subtitle"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_frequency_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_twenty_four"
        android:text="@string/create_goal_frequency_title"
        android:textSize="@dimen/text_size_sixteen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_frequency_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_eight"
        android:text="@string/create_goal_frequency_subtitle"
        android:textSize="@dimen/text_size_sixteen"
        app:layout_constraintStart_toStartOf="@id/tv_frequency_title"
        app:layout_constraintTop_toBottomOf="@id/tv_frequency_title" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/tg_frequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_twenty_four"
        android:layout_marginTop="@dimen/margin_eight"
        app:checkedButton="@id/btn_frequency_month"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_frequency_subtitle"
        app:singleSelection="true">

        <Button
            android:id="@+id/btn_frequency_week"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="@string/create_goal_frequency_week" />

        <Button
            android:id="@+id/btn_frequency_month"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="@string/create_goal_frequency_month" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_progress_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_twenty_four"
        android:text="@string/create_goal_progress_title"
        android:textSize="@dimen/text_size_sixteen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tg_frequency" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_progress_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_eight"
        android:text="@string/create_goal_progress_subtitle"
        android:textAlignment="textStart"
        android:textSize="@dimen/text_size_sixteen"
        app:layout_constraintStart_toStartOf="@id/tv_progress_title"
        app:layout_constraintTop_toBottomOf="@id/tv_progress_title" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/tg_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_twenty_four"
        android:layout_marginTop="@dimen/margin_eight"
        app:checkedButton="@id/btn_value_relative"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_progress_subtitle"
        app:singleSelection="true">

        <Button
            android:id="@+id/btn_value_fixed"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_goal_progress_fixed" />

        <Button
            android:id="@+id/btn_value_relative"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_goal_progress_relative" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_date_init"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_sixteen"
        android:hint="@string/create_goal_init_date_hint"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tg_progress"
        app:placeholderText="@string/create_goal_finish_date_place_holder">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_date_init"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_date_finish"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_sixteen"
        android:hint="@string/create_goal_finish_date_hint"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_date_init"
        app:placeholderText="@string/create_goal_finish_date_place_holder">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_date_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date" />

    </com.google.android.material.textfield.TextInputLayout>

    <br.com.michellebrito.financefocus.customcomponent.CustomButton
        android:id="@+id/btn_create_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_sixteen"
        android:layout_marginBottom="@dimen/margin_twenty_four"
        app:isEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:title="@string/btn_create_goal" />

</androidx.constraintlayout.widget.ConstraintLayout>