<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_sixteen"
        android:text="@string/increment_goal_bottom_sheet_title"
        android:textSize="@dimen/text_size_sixteen" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_different_value"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_sixteen"
        android:hint="@string/crate_goal_value_placeholder"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_date_init"
        app:placeholderText="@string/increment_goal_bottom_sheet_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_different_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions|number" />

    </com.google.android.material.textfield.TextInputLayout>

    <br.com.michellebrito.financefocus.customcomponent.CustomButton
        android:id="@+id/confirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/margin_sixteen"
        app:title="@string/btn_confirm" />
</LinearLayout>
