<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_variant_bottom"
    tools:context=".home.presentation.HomeFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_salutation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_salutation"
        android:textSize="@dimen/text_size_twenty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_create_goal"
        android:layout_marginBottom="@dimen/margin_hundred"/>

    <br.com.michellebrito.financefocus.customcomponent.CustomButton
        android:id="@+id/btn_create_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_sixteen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/btn_create_goal" />

    <br.com.michellebrito.financefocus.customcomponent.CustomButton
        android:id="@+id/btn_check_rates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_sixteen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_create_goal"
        app:title="@string/btn_check_rates" />

</androidx.constraintlayout.widget.ConstraintLayout>